# fdccv

./: .gitignore  CMakeLists.txt  README.md
include/: classifier.hpp  image.hpp  utils.hpp
latex/inteligencia-artificial/: bibliography.bib  main.tex
latex/visual/: main.aux  main.bcf  main.tex  referencias.bib
src/: classifier.cpp  image.cpp  main.cpp
